--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,6 @@
 .slider {
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-top: 15%;
+  margin-bottom: 15%;
   transform: rotate(270deg);
   height: 100px;
 }
@@ -16,10 +16,4 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-}
-
-.flexitem {
-    margin-left: 10px;
-    margin-right: 10px;
-    width: 25%;
 }
