--- a/src/components/AudioPlayer/AudioPlayer.css
+++ b/src/components/AudioPlayer/AudioPlayer.css
@@ -4,3 +4,32 @@
   transform: rotate(270deg);
   height: 100px;
 }
+
+.file-upload  {
+  height: 1em;
+  border: 2px solid;
+  border-radius: 5px;
+  border-color: #000000;
+  cursor: pointer;
+  padding: 2px 12px;
+  background-color: #202020;
+  color: #E5FFCC;
+}
+
+.file-upload:hover {
+  background: #808080
+}
+
+.audio-block {
+  width: 100%;
+  margin: 1em 0em;
+}
+
+input[type='file'] {
+  display: none;
+}
+
+h3 {
+  padding: 0px 1em;
+  margin: 0px;
+}
