--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@ body {
   padding: 0;
 }
 
+#root {
+  padding: 0px;
+  margin: 0px;
+}
+
 .flex-container {
   display: flex;
   flex-wrap: wrap;
@@ -18,6 +23,11 @@ body {
   margin: 50px 20px;
 }
 
-.conten-center {
+.content-center {
   text-align: center;
+}
+
+.slider {
+  transform: rotate(270deg);
+  height: 9rem;
 }
