--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   background-color: #C0C0C0;
-  padding: 0;
+  margin: 0;
 }
 
 #root {
@@ -13,21 +13,20 @@ body {
   flex-wrap: wrap;
 }
 
+.flex-container-center-content{
+  justify-content: center;
+}
+
 .flex-item-center {
   align-items: center;
-  justify-content: center;
+
 
 }
 
 .flex-container > div {
-  margin: 50px 20px;
+  margin: 0px 5px;
 }
 
 .content-center {
   text-align: center;
-}
-
-.slider {
-  transform: rotate(270deg);
-  height: 9rem;
 }
