--- a/src/components/AudioPlayer/AudioPlayer.css
+++ b/src/components/AudioPlayer/AudioPlayer.css
@@ -23,7 +23,7 @@ input[type='file'] {
 }
 
 h3 {
-  padding: 0px 1em;
+  /* padding: 0px 1em; */
   margin: 0px;
   max-width: 190px;
 }
@@ -52,7 +52,12 @@ button:disabled {
 }
 
 .loop-button {
-  width: 2rem;
+  width: 3rem;
+  height: 2rem;
+}
+
+.loop-button > span {
+   font: bold 1rem Arial, sans-serif;
 }
 
 .speed-slider {
@@ -63,6 +68,8 @@ button:disabled {
 .audiodisk {
   width: 12rem;
   height: 12rem;
+  border-radius: 50%;
+  border: 5px solid ;
 }
 
 .audiodisk-play {
