--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,8 @@
 .header {
   margin: 0px;
   width: 100%;
-  height: 5rem;
-  background-color: #A0A0A0;
+  height: 7rem;
+  background-color: #696969;
   font-size: 2rem;
   text-align: center;
 }
@@ -11,4 +11,12 @@
   padding-top: 12px;
   width: 100%;
   height: 30px;
+}
+
+.header-text {
+  position: absolute;
+  font-weight: 900;
+  padding-top: 2rem;
+  width: 100%;
+  text-align: center;
 }
