Added footer and osc

--- a/src/components/Controller/Mixer/Mixer.css
+++ b/src/components/Controller/Mixer/Mixer.css
@@ -2,8 +2,12 @@
   width: 86%;
 }
 
+.mixer {
+  border: 0.2rem solid;
+  /* border-left: 0.2rem solid;
+  border-right: 0.2rem solid; */
+}
+
 input[type=range]::-webkit-slider-thumb {
-
   height: 20rem;
-
 }
