Added more styles

--- a/src/components/Controller/AudioPlayer/Disk/Disk.css
+++ b/src/components/Controller/AudioPlayer/Disk/Disk.css
@@ -7,11 +7,11 @@
 }
 
 .audiodisk-red {
-  border: 0.25rem solid #B22222;
+  border: 0.25rem solid white;
 }
 
 .audiodisk-blue {
-  border: 0.25rem solid #0000FF;
+  border: 0.25rem solid black;
 }
 
 
