--- a/src/components/Controller/AudioPlayer/AudioPlayer.css
+++ b/src/components/Controller/AudioPlayer/AudioPlayer.css
@@ -31,20 +31,36 @@ h4 {
   word-wrap: break-word;
 }
 
-.audio-block > button {
-  border-top: none;
+.black-button {
+  font-size: 90%;
+  font-weight: 700;
+  color: rgb(209,209,217);
+  text-decoration: none;
+  text-shadow: 0 -1px 2px rgba(0,0,0,.2);
+  padding: .5em 1em;
   outline: none;
+  background: linear-gradient(rgb(110,112,120), rgb(81,81,86)) rgb(110,112,120);
+  box-shadow:
+   0 1px rgba(255,255,255,.2) inset,
+   0 3px 5px rgba(0,1,6,.5),
+   0 0 1px 1px rgba(0,1,6,.2);
+  transition: .2s ease-in-out;
 }
 
-button:disabled {
-  border: none;
+.black-button:disabled {
+  background: black;
 }
 
-.left-radius-button {
+
+.center-button {
+  border-radius: 3px;
+}
+
+.left-button {
   border-radius: 3rem 0rem 0rem 3rem;
 }
 
-.right-radius-button {
+.right-button {
   border-radius: 0rem 3rem 3rem 0rem;
 }
 
@@ -62,7 +78,15 @@ button:disabled {
   background: #B22222;
 }
 
+.red:hover {
+  background: #B22222;
+}
+
 .blue {
+  background: #00008B;
+}
+
+.blue:hover {
   background: #00008B;
 }
 
@@ -93,8 +117,8 @@ button:disabled {
 }
 
 .audio-player {
-  padding: 0 2rem;
   width: 22rem;
+  padding: 0 2rem;
 }
 
 
